# pool_test_task

./: CMakeLists.txt  install.sh  main.cpp  readme.md  run_big_test.sh  run_tests.sh
logging_lib/: CMakeLists.txt  logging.cpp  logging.hpp
src/: CMakeLists.txt
src/big_data_testing/: CMakeLists.txt  big_data.cpp  big_data.hpp  timer.hpp
src/pool_class/: CMakeLists.txt  forest_funcs.cpp  forest_funcs.hpp  pool.cpp  pool.hpp
tests/: CMakeLists.txt  tests.cpp  tests.hpp
